--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -26,6 +26,11 @@
       <meta name="description" content="{{ page_description | escape }}">
     {% endif %}
 
+    {% if request.page_type == 'product' %}
+      {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+      {{ 'custom-product-gallery.css' | asset_url | stylesheet_tag }}
+    {% endif %}
+
     {% render 'meta-tags' %}
 
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
@@ -372,5 +377,10 @@
     {%- if settings.cart_type == 'drawer' -%}
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+
+    {% if request.page_type == 'product' %}
+      <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
+      <script src="{{ 'custom-product-gallery.js' | asset_url }}" defer></script>
+    {% endif %}
   </body>
 </html>
